src/test/ui/parser/import-glob-path.stderr
error: expected `;`, found `::`
  --> $DIR/import-glob-path.rs:4:11
   |
LL | use foo::*::bar
   |           ^^ expected `;`

error: aborting due to previous error

